<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LonoMeter</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="humidity">HUMIDITY</string>
    <string name="average">AVERAGE</string>
    <string name="dew_point">DEW POINT</string>
    <string name="now">NOW</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="week">WEEK</string>
    <string name="day">DAY</string>
    <string name="level_low">LOW</string>
    <string name="level_normal">NORMAL</string>
    <string name="level_high">HIGH</string>

    <!-- BLE -->
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!--Main Screen-->
    <string name="last_updated">Last updated</string>
    <string name="connected">Connected</string>
    <string name="loading_data">Loading data</string>
    <string name="reconnecting">Reconnect...</string>
    <string name="scanning">Scanning</string>
    <string name="rename_channel">Rename channel</string>
    <string name="blank_channel">Your channel name is blank. Please try again!</string>
    <string name="input_channel_name">Input new channel name</string>
    <string name="export">Export</string>
    <string name="reconnect">Reconnect</string>

</resources>