<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_light" >

    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#aad3ad"
            android:text="Home"
            android:textColor="@color/white"
            android:textSize="@dimen/temp_title_text" />

        <Button
            android:id="@+id/tv_temperature"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.6"
            android:background="@color/white"
            android:gravity="left|center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/temperature"
            android:textColor="#2c6664"
            android:textSize="@dimen/temp_title_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_layout"
        android:layout_below="@+id/home_layout"
        android:layout_margin="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/now"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/tv_now_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:text="-- °C"
                        android:textColor="@color/green_text_color"
                        android:textSize="@dimen/temp_normal_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_average"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/average"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/haicham"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="60dp"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/tv_average_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:text="-- °C"
                        android:textColor="@color/green_text_color"
                        android:textSize="@dimen/temp_normal_text" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/tv_min_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:text="-- °C"
                        android:textColor="@color/green_text_color"
                        android:textSize="@dimen/temp_normal_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/dewpoint_layout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.2"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_dewpoint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dew_point"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/haicham"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="60dp"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/tv_dewpoint_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="5dp"
                        android:text="-- °C"
                        android:textColor="@color/green_text_color"
                        android:textSize="@dimen/temp_normal_text" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical" >

                    <TextView
                        android:id="@+id/tv_max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="55dp"
                        android:text=":"
                        android:textColor="@color/black"
                        android:textSize="@dimen/temp_normal_text" />

                    <TextView
                        android:id="@+id/tv_max_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="70dp"
                        android:text="-- °C"
                        android:textColor="@color/green_text_color"
                        android:textSize="@dimen/temp_normal_text" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/graph_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@color/green_text_color"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        layout="@layout/bottom_layout" />

</RelativeLayout>